--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <main>
       <div class="advice-wrapper">
-        <p>Adice #<span>177</span></p>
+        <p>Advice #<span>177</span></p>
         <h1>
           <q
             >It is easy to sit up an take notice, what's difficult is getting up
